# bazel-nestjs-starter

./: .bazelrc  .gitignore  BUILD.bazel  README.md  WORKSPACE  package.json  tsconfig.bazel.json  tsconfig.json
.dependabot/: config.yml
.github/: dependabot.yml
src/: BUILD.bazel  main.ts
src/src/: main.ts
