package(default_visibility = ["//visibility:public"])

# TS compile
load("@npm_bazel_typescript//:index.bzl", "ts_library")

# bazel build //src:app
ts_library(
    name = "app",
    srcs = glob(
        include = ["**/*.ts"],
        exclude = ["**/*spec.ts"],
    ),
    deps = [
        "@npm//@nestjs",
        "@npm//@types",
        "@npm//tslib",
    ],
)

load("@build_bazel_rules_nodejs//:defs.bzl", "nodejs_binary")

# bazel run //src:server
nodejs_binary(
    name = "server",
    data = [
        ":app",
        "@npm//@nestjs/common",
        "@npm//@nestjs/core",
        "@npm//@nestjs/platform-express",
    ],
    # entry_point defined as label:
    # https://github.com/bazelbuild/rules_nodejs/releases/tag/0.31.1
    entry_point = ":main.ts",
)

load("@io_bazel_rules_docker//nodejs:image.bzl", "nodejs_image")

# bazel build --platforms=@build_bazel_rules_nodejs//toolchains/node:linux_amd64 //src:docker
# docker import dist/bin/src/docker-layer.tar
nodejs_image(
    name = "docker",
    data = [
        ":app",
        "@npm//@nestjs/common",
        "@npm//@nestjs/core",
        "@npm//@nestjs/platform-express",
    ],
    entry_point = ":main.ts",
)

load("@io_bazel_rules_docker//container:container.bzl", "container_push")

# bazel run --define push_tag=${IMAGE_TAG} --define push_repository=${REPOSITORY} //src:push_container
container_push(
    name = "push_container",
    format = "Docker",
    image = ":docker",
    registry = "gcr.io",
    repository = "$(push_repository)",
    tag = "$(push_tag)",
)
